pkl-core/src/test/files/LanguageSnippetTests/input/errors/underscoreLet.pkl
foo = let (_ = throw("oops")) 0
